# phd-legacy

./: .gitignore  Makefile  Makefile.in  bootstrap  config  config.status  configure  configure.ac  local-config  project.sublime-workspace
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: CUDA_interface.h  CUDA_solver.h  FEM_1D_mumps.h  base_functions.h  benchmark.h  bspline_fem_solver.h  config.h  config.h.in  fem_2d_mumps.h  mumps_solver.h  quadratures.h  solver_factory.h  utils.h
include/device/: base_functions.cuh  matrix_utils.cuh  merge_utils.cuh  utils.cuh
src/: Makefile  Makefile.am  Makefile.in  benchmark.cc  kernels.cu  main.cc  mumps_solver.cc  quadratures.cc  sieve.rb  wyniki.txt
src/.deps/: benchmark.Po  main.Po  mumps_solver.Po  quadratures.Po
